kubernetes/talos/deploy/bitwarden/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: websocket
      port: 3012
      protocol: TCP
      targetPort: websocket
  selector:
    app: bitwarden
    release: bitwarden
  type: ClusterIP
